--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           </ul>
         </div>
         <div class="content-left__img">
-          <img src="/img/green.png" alt="image" title="image" witdh="184" height="134">
+          <img src="/img/green1.png" alt="image" title="image" witdh="184" height="134">
         </div>
       </div>
       <div class="content-center">
